--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,10 +1,9 @@
-.nav-list{
-    display: inline-block;
-    float: none;
-}
-
-.nav-list > button{
+.nav-menu button{
     margin: 0px 10px;
     padding-left: 30px;
     padding-right: 30px;
+}
+
+.nav-main div {
+    display: flex;
 }
