--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,14 +7,14 @@
                 type="button"
                 routerLink="/documentation"
             >
-                Docs
+                DOCS
             </button>
             <button 
                 class="btn btn-outline-secondary" 
                 type="button"
                 routerLink="/about"
             >
-                About
+                ABOUT
             </button>
         </div>
         <!-- LOGO -->
