--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,8 @@
 *{
     font-family: 'Oswald', sans-serif;
 }
+
+body{
+    /* background-color: #f8f9fa!important; */
+    background-color: #363C48!important;
+}
