Components and home page modules

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<!-- SHOW CASE -->
+<app-showcase></app-showcase>
+<!-- TOP VGS -->
+<app-datatable-top-vg></app-datatable-top-vg>
