--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -14,12 +14,12 @@
         <ul>
             <li>
                 <a href="https://vgostapi.xyz/api/videogames/all">
-                    Videgames: XXX
+                    Videgames: {{totalVG}}
                 </a>
             </li>
             <li>
                 <a href="https://vgostapi.xyz/api/soundtracks/all">
-                    SoundTracks: XXX
+                    SoundTracks: {{totalOST}}
                 </a>
             </li>
         </ul>
