--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,30 +1,30 @@
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-        <!-- MENU -->
-        <div class="nav-menu">
-            <button 
-                class="btn btn-outline-secondary" 
-                type="button"
-                routerLink="/documentation"
-            >
-                DOCS
-            </button>
-            <button 
-                class="btn btn-outline-secondary" 
-                type="button"
-                routerLink="/about"
-            >
-                ABOUT
-            </button>
-        </div>
         <!-- LOGO -->
         <a class="navbar-brand" routerLink="/">
             <img src="../../../assets/img/logo.png" alt="" width="50" height="50" class="d-inline-block align-top">
         </a>
-        <!-- GITHUB -->
-        <a class="navbar-brand btn btn-sm btn-outline-secondary" href="https://github.com/chelosky/nodejs-ost-videogames-api">
-            <img src="../../../assets/img/github.svg" alt="" width="30" height="30" class="d-inline-block align-top">
-            GitHub
-        </a>
+        <!-- MENU -->
+        <div class="nav-menu">
+            <a 
+                class="btn btn-outline-secondary btn-lg" 
+                type="button"
+                routerLink="/documentation"
+            >
+                DOCS
+            </a>
+            <a 
+                class="btn btn-outline-secondary btn-lg" 
+                type="button"
+                routerLink="/about"
+            >
+                ABOUT
+            </a>
+            <!-- GITHUB -->
+            <a class="btn btn-outline-secondary btn-lg" href="https://github.com/chelosky/nodejs-ost-videogames-api">
+                <img src="../../../assets/img/github.svg" alt="" width="30" height="30" class="d-inline-block align-top">
+                GitHub
+            </a>
+        </div>
     </div>
 </nav>
