--- a/src/app/components/datatable-top-vg/datatable-top-vg.component.css
+++ b/src/app/components/datatable-top-vg/datatable-top-vg.component.css
@@ -1,4 +1,42 @@
 .main-container{
     width: 100%;
-    background-color: #f8f9fa!important;
+    padding-top: 10px;
+    padding-bottom: 50px;
+}
+
+.title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #f8f9fa!important;
+    font-size: 30px;
+    padding: 40px;
+}
+
+table {
+    min-width: 900px;
+    width: 100%;
+}
+
+
+.table-at{
+    width: 100%;
+    max-width: 100%;
+    overflow-x: auto;
+}
+
+.mat-sort-header-container,
+.mat-header-cell {
+    text-align: center !important;
+    margin: 15px;
+}
+
+.mat-header-cell,
+.mat-cell {
+    padding: 15px;
+}
+
+td, th {
+    width: 25%;
 }
