--- a/src/app/components/datatable-top-vg/datatable-top-vg.component.html
+++ b/src/app/components/datatable-top-vg/datatable-top-vg.component.html
@@ -2,7 +2,47 @@
     <div class="title">
         TOP 10 - MOST LISTENED VG
     </div>
-    <div class="data-table">
-
+    <div class="container">
+      <div class="table-at">
+        <div class="mat-elevation-z1">
+          <table mat-table [dataSource]="dataSource" matSort>
+      
+            <!-- ID Column -->
+            <ng-container matColumnDef="_id">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+              <td mat-cell *matCellDef="let row"> {{row._id}} </td>
+            </ng-container>
+        
+            <!-- Name Column -->
+            <ng-container matColumnDef="title">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+              <td mat-cell *matCellDef="let row"> {{row.title}} </td>
+            </ng-container>
+        
+            <!-- Progress Column -->
+            <ng-container matColumnDef="saga">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Saga </th>
+              <td mat-cell *matCellDef="let row"> {{row.saga}} </td>
+            </ng-container>
+            
+            <!-- Color Column -->
+            <ng-container matColumnDef="description">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+              <td mat-cell *matCellDef="let row">
+                {{row.description}}
+              </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">No data matching the filter</td>
+            </tr>
+          </table>
+        </div>        
+      </div>
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </div>
 </div>
