--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,3 @@
-<p>about works!</p>
+<div class="question-container">
+    <app-question-answer [question]="item" *ngFor="let item of [1,2,3,4,5,6,7,8,9,1,2,3,4,5,6,7,8,9]"></app-question-answer>
+</div>
